# allegro-free-fighting-engine

./: .gitignore  CMakeLists.txt  COPYING  Kof91.c  Makefile  README.md
cmake/Modules/: FindAllegro.cmake
inc/: config.h  defs.h  display.h  global.h  initfiles.h  inits.h  loads.h  logger.h  macros.h  main.h  options.h  refresh.h  screenshot.h  so.inc  sprites.h
src/: CMakeLists.txt  Makefile  batle.c  batle.h  clean.sh  compile.bat  config.h  configure  configure.bat  defs.h  display.c  display.h  effects.c  effects.h  global.h  initfiles.c  inits.c  intro.c  intro.h  loads.c  logger.c  macros.h  main.c  main.h  makefile.dos  makefile.lnx  message.c  monitor.c  monitor.h  moves.c  moves.h  mp3.c  mp3.h  options.c  palettes.c  palettes.h  readme.txt  refresh.c  screenshot.c  sprites.c  (+4 more)
